--- a/app/src/main/res/layout/info_bottom_sheet.xml
+++ b/app/src/main/res/layout/info_bottom_sheet.xml
@@ -1,4 +1,3 @@
-
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/bottom_sheet_layout"
@@ -18,7 +17,6 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <!-- Chevron indicating that the bottom sheet is expandable -->
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -32,234 +30,132 @@
                 android:src="@drawable/icn_chevron_up" />
         </RelativeLayout>
 
-        <!-- Inference time row -->
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
-            android:orientation="horizontal">
+       <androidx.constraintlayout.widget.ConstraintLayout
+           android:layout_width="match_parent"
+           android:layout_height="500dp"
+          >
 
-            <TextView
-                android:id="@+id/inference_time_label"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="@string/label_interence_time"
-                android:textColor="@color/bottom_sheet_text_color"
-                android:textSize="@dimen/bottom_sheet_text_size" />
+          <TextView
+              android:id="@+id/tv1"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Name :"
+              android:textColor="@color/teal_700"
+              android:textSize="20sp"
+              app:fontFamily="sans-serif-condensed-medium"
+              app:layout_constraintLeft_toLeftOf="parent"
+              android:layout_marginLeft="20dp"
+              android:layout_marginTop="20dp"
+              app:layout_constraintTop_toTopOf="parent"
+              />
 
-            <TextView
-                android:id="@+id/inference_time_val"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:gravity="end"
-                android:text="0ms"
-                android:textColor="@color/bottom_sheet_text_color"
-                android:textSize="@dimen/bottom_sheet_text_size" />
-        </androidx.appcompat.widget.LinearLayoutCompat>
+          <TextView
+              android:id="@+id/name_tv1"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Know Me"
+              android:textColor="@color/black"
+              android:textSize="15sp"
+              app:layout_constraintLeft_toLeftOf="parent"
+              android:layout_marginLeft="20dp"
+              android:layout_marginTop="10dp"
+              app:layout_constraintTop_toBottomOf="@id/tv1"
+              />
 
-        <!-- ML confidence threshold adjustment row -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
-            android:gravity="center"
-            android:orientation="horizontal">
+          <TextView
+              android:id="@+id/tv2"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Descreption :"
+              android:textColor="@color/teal_700"
+              android:textSize="20sp"
+              app:fontFamily="sans-serif-condensed-medium"
+              app:layout_constraintLeft_toLeftOf="parent"
+              android:layout_marginLeft="20dp"
+              android:layout_marginTop="20dp"
+              app:layout_constraintTop_toBottomOf="@id/name_tv1"
+              />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="@string/label_confidence_threshold"
-                android:textColor="@color/bottom_sheet_text_color"
-                android:textSize="@dimen/bottom_sheet_text_size" />
+          <TextView
+              android:id="@+id/descreption_tv2"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Know Me"
+              android:textColor="@color/black"
+              android:textSize="15sp"
+              app:layout_constraintLeft_toLeftOf="parent"
+              android:layout_marginLeft="20dp"
+              android:layout_marginTop="10dp"
+              app:layout_constraintTop_toBottomOf="@id/tv2"
+              />
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
+          <TextView
+              android:id="@+id/tv3"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:text="Links :"
+              android:textColor="@color/teal_700"
+              android:textSize="20sp"
+              app:fontFamily="sans-serif-condensed-medium"
+              app:layout_constraintLeft_toLeftOf="parent"
+              android:layout_marginLeft="20dp"
+              android:layout_marginTop="20dp"
+              app:layout_constraintTop_toBottomOf="@id/descreption_tv2"
+              />
 
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/threshold_minus"
-                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
-                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
-                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_minus"
-                    android:src="@drawable/ic_minus" />
+          <LinearLayout
+              android:id="@+id/uses_tv3"
+              android:layout_width="match_parent"
+              android:layout_height="50dp"
+              android:text="Know Me"
+              android:textColor="@color/black"
+              android:textSize="15sp"
+              app:layout_constraintLeft_toLeftOf="parent"
+              android:layout_marginTop="10dp"
+              app:layout_constraintTop_toBottomOf="@id/tv3"
+              android:orientation="horizontal"
+              android:gravity="center" >
 
-                <TextView
-                    android:id="@+id/threshold_value"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
-                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
-                    android:gravity="center"
-                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
-                    android:text="0.50"
-                    android:textColor="@color/bottom_sheet_text_color"
-                    android:textSize="@dimen/bottom_sheet_text_size" />
+             <androidx.cardview.widget.CardView
+                 android:id="@+id/profile_cv1"
+                 android:layout_width="50dp"
+                 android:layout_height="50dp"
+                 android:layout_gravity="center"
+                 android:backgroundTint="@color/white"
+                 app:cardCornerRadius="25dp"
+                 >
 
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/threshold_plus"
-                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
-                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
-                    android:contentDescription="@string/alt_bottom_sheet_threshold_button_plus"
-                    android:src="@drawable/ic_plus" />
-            </LinearLayout>
-        </RelativeLayout>
+                <ImageView
+                    android:id="@+id/google_img"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/google_logo"
+                    />
 
-        <!-- ML max results adjustment row -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
-            android:gravity="center"
-            android:orientation="horizontal">
+             </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="@string/label_max_results"
-                android:textColor="@color/bottom_sheet_text_color"
-                android:textSize="@dimen/bottom_sheet_text_size" />
+             <androidx.cardview.widget.CardView
+                 android:id="@+id/profile_cv2"
+                 android:layout_width="50dp"
+                 android:layout_height="50dp"
+                 android:layout_marginLeft="60dp"
+                 android:layout_gravity="center"
+                 android:backgroundTint="@color/white"
+                 app:cardCornerRadius="25dp"
+                 >
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:gravity="center"
-                android:orientation="horizontal">
+                <ImageView
+                    android:id="@+id/github_img"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_gravity="center"
+                    android:src="@drawable/github_logo"
+                    />
 
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/max_results_minus"
-                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
-                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
-                    android:contentDescription="@string/alt_bottom_sheet_max_results_button_minus"
-                    android:src="@drawable/ic_minus" />
+             </androidx.cardview.widget.CardView>
+          </LinearLayout>
+       </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <TextView
-                    android:id="@+id/max_results_value"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
-                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
-                    android:gravity="center"
-                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
-                    android:text="3"
-                    android:textColor="@color/bottom_sheet_text_color"
-                    android:textSize="@dimen/bottom_sheet_text_size" />
-
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/max_results_plus"
-                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
-                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
-                    android:contentDescription="@string/alt_bottom_sheet_max_results_button_plus"
-                    android:src="@drawable/ic_plus" />
-            </LinearLayout>
-        </RelativeLayout>
-
-        <!-- Number of threads adjustment row -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:text="@string/label_threads"
-                android:textColor="@color/bottom_sheet_text_color"
-                android:textSize="@dimen/bottom_sheet_text_size" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
-
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/threads_minus"
-                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
-                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
-                    android:contentDescription="@string/alt_bottom_sheet_thread_button_minus"
-                    android:src="@drawable/ic_minus" />
-
-                <TextView
-                    android:id="@+id/threads_value"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/bottom_sheet_control_text_side_margin"
-                    android:layout_marginRight="@dimen/bottom_sheet_control_text_side_margin"
-                    android:gravity="center"
-                    android:minEms="@integer/bottom_sheet_control_text_min_ems"
-                    android:text="2"
-                    android:textColor="@color/bottom_sheet_text_color"
-                    android:textSize="@dimen/bottom_sheet_text_size" />
-
-                <androidx.appcompat.widget.AppCompatImageButton
-                    android:id="@+id/threads_plus"
-                    android:layout_width="@dimen/bottom_sheet_control_btn_size"
-                    android:layout_height="@dimen/bottom_sheet_control_btn_size"
-                    android:contentDescription="@string/alt_bottom_sheet_thread_button_plus"
-                    android:src="@drawable/ic_plus" />
-            </LinearLayout>
-        </RelativeLayout>
-
-        <!-- Delegate selection row -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/label_delegate"
-                android:textColor="@color/bottom_sheet_text_color"
-                android:textSize="@dimen/bottom_sheet_text_size" />
-
-            <androidx.appcompat.widget.AppCompatSpinner
-                android:id="@+id/spinner_delegate"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:entries="@array/delegate_spinner_titles"
-                android:minWidth="@dimen/bottom_sheet_spinner_delegate_min_width"
-                android:spinnerMode="dropdown"
-                android:theme="@style/BottomSheetSpinnerItemStyle" />
-
-        </RelativeLayout>
-
-        <!-- Model selection row -->
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/bottom_sheet_default_row_margin">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/label_models"
-                android:textColor="@color/bottom_sheet_text_color"
-                android:textSize="@dimen/bottom_sheet_text_size" />
-
-            <androidx.appcompat.widget.AppCompatSpinner
-                android:id="@+id/spinner_model"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:entries="@array/models_spinner_titles"
-                android:minWidth="@dimen/bottom_sheet_spinner_model_min_width"
-                android:spinnerMode="dropdown"
-                android:theme="@style/BottomSheetSpinnerItemStyle" />
-
-        </RelativeLayout>
     </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.core.widget.NestedScrollView>
