--- a/app/src/main/res/layout/info_bottom_sheet.xml
+++ b/app/src/main/res/layout/info_bottom_sheet.xml
@@ -32,7 +32,7 @@
 
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
-           android:layout_height="500dp"
+           android:layout_height="wrap_content"
           >
 
           <TextView
@@ -53,7 +53,7 @@
               android:id="@+id/name_tv1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="Know Me"
+              android:text=" "
               android:textColor="@color/black"
               android:textSize="15sp"
               app:layout_constraintLeft_toLeftOf="parent"
@@ -80,7 +80,7 @@
               android:id="@+id/descreption_tv2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="Know Me"
+              android:text=" "
               android:textColor="@color/black"
               android:textSize="15sp"
               app:layout_constraintLeft_toLeftOf="parent"
