--- a/app/src/main/res/layout/activity_static.xml
+++ b/app/src/main/res/layout/activity_static.xml
@@ -1,33 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-    ~ Copyright 2022 The TensorFlow Authors. All Rights Reserved.
-    ~
-    ~ Licensed under the Apache License, Version 2.0 (the "License");
-    ~ you may not use this file except in compliance with the License.
-    ~ You may obtain a copy of the License at
-    ~
-    ~       http://www.apache.org/licenses/LICENSE-2.0
-    ~
-    ~ Unless required by applicable law or agreed to in writing, software
-    ~ distributed under the License is distributed on an "AS IS" BASIS,
-    ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-    ~ See the License for the specific language governing permissions and
-    ~ limitations under the License.
--->
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/camera_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.camera.view.PreviewView
-        android:id="@+id/view_finder"
+
+    <ImageView
+        android:id="@+id/pic_image_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:scaleType="fillStart" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:scaleType="fillStart"/>
 
     <include
         android:id="@+id/bottom_sheet_layout"
-        layout="@layout/info_bottom_sheet" />
+        layout="@layout/info_bottom_sheet"
+        app:layout_constraintTop_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/recyclerview_results"
@@ -43,6 +37,7 @@
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:textSize="20sp"
+            android:textColor="@color/black"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="70dp"
             android:gravity="center_vertical"
@@ -54,6 +49,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:textSize="20sp"
+            android:textColor="@color/black"
             android:layout_marginRight="10dp"
             android:gravity="center_vertical"
             app:layout_constraintTop_toTopOf="parent"
@@ -67,6 +63,5 @@
         android:background="@color/bounding_box_color"
         app:layout_anchor="@id/recyclerview_results"
         app:layout_anchorGravity="bottom" />
-
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
