--- a/app/src/main/res/layout/activity_select_screen.xml
+++ b/app/src/main/res/layout/activity_select_screen.xml
@@ -4,35 +4,65 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".SelectScreen">
 
-    <Button
-        android:id="@+id/Realtime_btn"
+    <ImageView
+        android:id="@+id/select_img"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Realtime"
-        android:textSize="20sp"
-        android:backgroundTint="#3C3C3C"
-        android:textColor="@color/white"
-        style="@style/Widget.Material3.Button"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
+        android:layout_height="400dp"
+        android:background="@drawable/img"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:layout_marginTop="20dp"
+        />
+
+    <TextView
+        android:id="@+id/register_tv11"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:gravity="center"
+        android:text="Unlock the possibilities of Next Tech Lab with our app\n Select an option below to proceed with exploring the different things in this lab."
+        android:textColor="#757575"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@id/Realtime_btn"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/select_img" />
+
+   <Button
+        android:id="@+id/Realtime_btn"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="Realtime Scan"
+        android:textSize="18sp"
+        android:backgroundTint="#3C3C3C"
+        android:textColor="@color/white"
+        style="@style/Widget.Material3.Button"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+       app:layout_constraintTop_toBottomOf="@id/register_tv11"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+       app:layout_constraintBottom_toTopOf="@id/statict_btn"
         />
     <Button
         android:id="@+id/statict_btn"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:text="Static"
-        android:textSize="20sp"
+        android:text="Static Scan"
+        android:textSize="18sp"
         android:backgroundTint="#3C3C3C"
         android:textColor="@color/white"
         style="@style/Widget.Material3.Button"
-        android:layout_marginRight="20dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
         app:layout_constraintTop_toBottomOf="@id/Realtime_btn"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
