--- a/app/src/main/res/layout/info_bottom_sheet.xml
+++ b/app/src/main/res/layout/info_bottom_sheet.xml
@@ -66,7 +66,7 @@
               android:id="@+id/tv2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="Descreption :"
+              android:text="Description :"
               android:textColor="@color/teal_700"
               android:textSize="20sp"
               app:fontFamily="sans-serif-condensed-medium"
@@ -93,7 +93,7 @@
               android:id="@+id/tv3"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
-              android:text="Links :"
+              android:text="Uses :"
               android:textColor="@color/teal_700"
               android:textSize="20sp"
               app:fontFamily="sans-serif-condensed-medium"
@@ -103,8 +103,33 @@
               app:layout_constraintTop_toBottomOf="@id/descreption_tv2"
               />
 
+           <TextView
+               android:id="@+id/Uses_tv3"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text=" "
+               android:textColor="@color/black"
+               android:textSize="15sp"
+               app:layout_constraintLeft_toLeftOf="parent"
+               android:layout_marginLeft="20dp"
+               android:layout_marginTop="10dp"
+               app:layout_constraintTop_toBottomOf="@id/tv3"
+               />
+           <TextView
+               android:id="@+id/tv4"
+               android:layout_width="wrap_content"
+               android:layout_height="wrap_content"
+               android:text="Links :"
+               android:textColor="@color/teal_700"
+               android:textSize="20sp"
+               app:fontFamily="sans-serif-condensed-medium"
+               app:layout_constraintLeft_toLeftOf="parent"
+               android:layout_marginLeft="20dp"
+               android:layout_marginTop="20dp"
+               app:layout_constraintTop_toBottomOf="@id/Uses_tv3"
+               />
           <LinearLayout
-              android:id="@+id/uses_tv3"
+              android:id="@+id/bottom_sheet_ll"
               android:layout_width="match_parent"
               android:layout_height="50dp"
               android:text="Know Me"
@@ -112,7 +137,7 @@
               android:textSize="15sp"
               app:layout_constraintLeft_toLeftOf="parent"
               android:layout_marginTop="10dp"
-              app:layout_constraintTop_toBottomOf="@id/tv3"
+              app:layout_constraintTop_toBottomOf="@id/tv4"
               android:orientation="horizontal"
               android:gravity="center" >
 
