--- a/app/src/main/res/layout/activity_static.xml
+++ b/app/src/main/res/layout/activity_static.xml
@@ -20,13 +20,13 @@
     <ImageView
         android:id="@+id/pic_image_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="673dp"
         android:layout_marginTop="55dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:scaleType="fillStart"/>
+        app:scaleType="fillStart" />
 
     <include
         android:id="@+id/bottom_sheet_layout"
