--- a/app/src/main/res/layout/info_bottom_sheet.xml
+++ b/app/src/main/res/layout/info_bottom_sheet.xml
@@ -24,8 +24,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
+                android:layout_centerInParent="true"
                 android:contentDescription="@string/alt_bottom_sheet_chevron"
                 android:src="@drawable/icn_chevron_up" />
         </RelativeLayout>
